# ffmpeg_chain

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  run_tests.sh
.github/workflows/: build-and-test.yml  release.yml  test-and-release.yml
src/ffmpeg_chain/: __init__.py  ffmpeg.py  py.typed
src/ffmpeg_chain/core/: __init__.py  filters.py  nodes.py  process.py  streams.py
tests/: conftest.py  test_ffmpeg.py  test_filters.py  test_nodes.py  test_process.py  test_streams.py
