[project]
name = "ffmpeg-nodes"
version = "0.1.0"
description = "A Python library for node-based FFmpeg command building"
readme = "README.md"
authors = [
    { name = "HunterAP", email = "etgarkaspi@gmail.com" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "uvtrick>=0.4.1",
]

[project.optional-dependencies]
psutil = ["psutil>=6.1.0"]
dev = [
    "pytest>=8.3.4",
    "mypy>=1.13.0",
    "ruff>=0.8.1",
    "types-psutil>=6.1.0.20241102",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ffmpeg_chain"]

[tool.hatch.build]
artifacts = [
    "src/ffmpeg_chain/py.typed",
    "src/ffmpeg_chain/core/py.typed"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
addopts = "-ra -q --import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "psutil: marks tests that require psutil to be installed"
]

[tool.ruff]
lint.select = ["E", "F", "B", "W", "I", "N", "UP", "PL"]
lint.ignore = []
line-length = 120
target-version = "py39"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
    "types-psutil>=6.1.0.20241102",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
    "types-psutil>=6.1.0.20241102",
]
